[metadata]
name = lifter_api_wrapper
version = 0.2.0
url = "https://github.com/WeightliftingNZ/lifter-api-wrapper"
description = A wrapper for lifter_api
long_description = file:README.md
author = Shivan Sivakumaran
license = MIT
platforms = osx
classifiers =
	Development Status :: 1 - Planning
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10

[options]
packages = lifter_api
install_requires =
	requests>=2.28.1
python_requires = >=3.10
package_dir =
	=src
zip_safe = no

[options.extras_require]
testing =
	pytest>=7.1.2
	mypy>=0.961
	mock>=4.0.3
	flake8>=4.0.1
	pytest-cov>=3.0.0
	pytest-mock>=3.8.2
	tox>=3.25.1

[flake8]
max-line-length = 79
max-complexity = 12
ignore = E501, W503, E203
per-file-ignores = __init__.py:F401


[bumpversion]
current_version = 0.2.0
commit = True
tag = True
sign_tag = True

[bumpversion:file:setup.cfg]
search = version = {current_version}
search = version = {new_version}

[bumpversion:file:src/lifter_api/__init__.py]
